--- a/HelloWPFApp/HelloWPFApp/App.xaml
+++ b/HelloWPFApp/HelloWPFApp/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Practice_WPF1.App"
+﻿<Application x:Class="HelloWPFApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Practice_WPF1"
+             xmlns:local="clr-namespace:HelloWPFApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
