--- a/HelloWPFApp/HelloWPFApp/MainWindow.xaml
+++ b/HelloWPFApp/HelloWPFApp/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Practice_WPF1.MainWindow"
+﻿<Window x:Class="HelloWPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Practice_WPF1"
+        xmlns:local="clr-namespace:HelloWPFApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
