--- a/HelloWPFApp/ExpenseIt/ExpenseItHome.xaml
+++ b/HelloWPFApp/ExpenseIt/ExpenseItHome.xaml
@@ -8,7 +8,29 @@
       d:DesignHeight="350" d:DesignWidth="500"
       Title="ExpenseIt - Home">
 
-    <Grid>
-        
+    <!-- 3행 1열 테이블 레이아웃 -->
+    <Grid Margin="10, 0, 10, 10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- People list -->
+        <Border Grid.Column="0" Grid.Row="0" Height="35" Padding="5" Background="#4E87D4">
+            <Label VerticalAlignment="Center" Foreground="White">Names</Label>
+        </Border>
+        <ListBox Name="peopleListBox" Grid.Column="0" Grid.Row="1">
+            <ListBoxItem>Mike</ListBoxItem>
+            <ListBoxItem>Lisa</ListBoxItem>
+            <ListBoxItem>John</ListBoxItem>
+            <ListBoxItem>Mary</ListBoxItem>
+        </ListBox>
+
+        <!-- View report button -->
+        <Button Grid.Column="0" Grid.Row="2" Margin="0,10,0,10" Width="125" Height="25" HorizontalAlignment="Right">View</Button>
     </Grid>
 </Page>
