--- a/HelloWPFApp/ExpenseIt/ExpenseItHome.xaml
+++ b/HelloWPFApp/ExpenseIt/ExpenseItHome.xaml
@@ -10,7 +10,40 @@
 
     <!-- 3행 1열 테이블 레이아웃 -->
     <Grid Margin="10, 0, 10, 10">
-        <Grid.ColumnDefinitions>
+        <!-- XmlDataProvider 데이터 템플릿. 리소스 정의를 가장 맨 앞에!-->
+        <Grid.Resources>
+            <!-- Expense Report Data -->
+            <XmlDataProvider x:Key="ExpenseDataSource" XPath="Expenses">
+                <x:XData>
+                    <Expenses xmlns="">
+                        <Person Name="Mike" Department="Legal">
+                            <Expense ExpenseType="Lunch" ExpenseAmount="50" />
+                            <Expense ExpenseType="Transportation" ExpenseAmount="50" />
+                        </Person>
+                        <Person Name="Lisa" Department="Marketing">
+                            <Expense ExpenseType="Document printing" ExpenseAmount="50"/>
+                            <Expense ExpenseType="Gift" ExpenseAmount="125" />
+                        </Person>
+                        <Person Name="John" Department="Engineering">
+                            <Expense ExpenseType="Magazine subscription" ExpenseAmount="50"/>
+                            <Expense ExpenseType="New machine" ExpenseAmount="600" />
+                            <Expense ExpenseType="Software" ExpenseAmount="500" />
+                        </Person>
+                        <Person Name="Mary" Department="Finance">
+                            <Expense ExpenseType="Dinner" ExpenseAmount="100" />
+                        </Person>
+                    </Expenses>
+                </x:XData>
+            </XmlDataProvider>
+
+            <!-- Name item template -->
+            <DataTemplate x:Key="nameItemTemplate">
+                <Label Content="{Binding XPath=@Name}"/>
+            </DataTemplate>
+        </Grid.Resources>
+        
+        <!-- 스타일 미적용 코드 -->
+        <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="230" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
@@ -29,8 +62,7 @@
                FontWeight="Bold" FontSize="18" Foreground="#0066cc">
             View Expense Report
         </Label>
-        
-        <!-- People list -->
+        --><!-- People list --><!--
         <Border Grid.Column="1" Grid.Row="1" Height="35" Padding="5" Background="#4E87D4">
             <Label VerticalAlignment="Center" Foreground="White">Names</Label>
         </Border>
@@ -41,8 +73,48 @@
             <ListBoxItem>Mary</ListBoxItem>
         </ListBox>
 
-        <!-- View report button -->
+        --><!-- View report button --><!--
         <Button Grid.Column="1" Grid.Row="3" Margin="0,10,0,10" Width="125" 
-                Height="25" HorizontalAlignment="Right">View</Button>
+                Height="25" HorizontalAlignment="Right" Click="Button_Click">View</Button>-->
+
+        <!-- 스타일 적용 코드 -->
+        <Grid.Background>
+            <ImageBrush ImageSource="watermark.png" />
+        </Grid.Background>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="230" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        
+        <!-- People list -->
+        <Label Grid.Column="1" Style="{StaticResource listHeaderTextStyle}">
+            View Expense Report
+        </Label>
+
+        <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource listHeaderStyle}">
+            <Label Style="{StaticResource listHeaderTextStyle}">Names</Label>
+        </Border>
+        <!-- 데이터 템플릿 미적용 <ListBox Name="peopleListBox" Grid.Column="1" Grid.Row="2">
+            <ListBoxItem>Mike</ListBoxItem>
+            <ListBoxItem>Lisa</ListBoxItem>
+            <ListBoxItem>John</ListBoxItem>
+            <ListBoxItem>Mary</ListBoxItem>
+        </ListBox> -->
+        <ListBox Name="peopleListBox" Grid.Column="1" Grid.Row="2" 
+                 ItemsSource="{Binding Source={StaticResource ExpenseDataSource}, XPath=Person}"
+                 ItemTemplate="{StaticResource nameItemTemplate}">
+        </ListBox>
+
+        <!-- View report button -->
+        <Button Grid.Column="1" Grid.Row="3" Click="Button_Click" 
+                Style="{StaticResource buttonStyle}">View</Button>
     </Grid>
 </Page>
