--- a/HelloWPFApp/ExpenseIt/ExpenseReportPage.xaml
+++ b/HelloWPFApp/ExpenseIt/ExpenseReportPage.xaml
@@ -8,7 +8,93 @@
       d:DesignHeight="350" d:DesignWidth="500"
       Title="ExpenseIt - Home">
 
+    <!-- 사람의 이름과 지출 보고서를 출력할 행렬 레이아웃 -->
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="watermark.png" />
+        </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="230" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <!-- 스타일 미적용 <Label Grid.Column="1" VerticalAlignment="Center" FontFamily="Trebuchet MS" 
+               FontWeight="Bold" FontSize="18" Foreground="#0066cc"> -->
+        <Label Grid.Column="1" Style="{StaticResource headerTextStyle}">
+            Expense Report For:
+        </Label>
+        <Grid Margin="10" Grid.Column="1" Grid.Row="1">
+            <!--Templates to display expense report data 리소스 정의를 가장 맨 앞에!-->
+            <Grid.Resources>
+                <!-- Reason item template -->
+                <DataTemplate x:Key="typeItemTemplate">
+                    <Label Content="{Binding XPath=@ExpenseType}"/>
+                </DataTemplate>
+                <!-- Amount item template -->
+                <DataTemplate x:Key="amountItemTemplate">
+                    <Label Content="{Binding XPath=@ExpenseAmount}"/>
+                </DataTemplate>
+            </Grid.Resources>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            
+            <!-- Name -->
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
+                <!-- 스타일 미적용 <Label Margin="0,0,0,5" FontWeight="Bold">NameL</Label>
+                <Label Margin="0,0,0,5" FontWeight="Bold"></Label> -->
+                <Label Style="{StaticResource labelStyle}">Name:</Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Name}"></Label>
+            </StackPanel>
+            
+            <!-- Department -->
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal">
+                <!-- 스타일 미적용 <Label Margin="0,0,0,5" FontWeight="Bold">NameL</Label>
+                <Label Margin="0,0,0,5" FontWeight="Bold"></Label> -->
+                <Label Style="{StaticResource labelStyle}">Department</Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Department}"></Label>
+            </StackPanel>
+
+            <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top"
+                HorizontalAlignment="Left">
+                <!-- Expense type and Amount table -->
+                <!-- 스타일 미적용 <DataGrid AutoGenerateColumns="False" RowHeaderWidth="0" >
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="{x:Type DataGridColumnHeader}">
+                            <Setter Property="Height" Value="35" />
+                            <Setter Property="Padding" Value="5" />
+                            <Setter Property="Background" Value="#4E87D4" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle> -->
+                <!-- <DataGrid ColumnHeaderStyle="{StaticResource columnHeaderStyle}" 
+                    AutoGenerateColumns="False" RowHeaderWidth="0" >
+                     <DataGrid.Columns>
+                        <DataGridTextColumn Header="ExpenseType" />
+                        <DataGridTextColumn Header="Amount" /> -->
+
+                <!-- Expense type and Amount table -->
+                <DataGrid ItemsSource="{Binding XPath=Expense}" 
+                          ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0" >
+
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Header="ExpenseType" CellTemplate="{StaticResource typeItemTemplate}" />
+                        <DataGridTemplateColumn Header="Amount" CellTemplate="{StaticResource amountItemTemplate}" />
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </Grid>
         
     </Grid>
 </Page>
